@@ -19,7 +19,7 @@ jagsUI <- jags <- function(data,inits=NULL,parameters.to.save,model.file,n.chain
   if(parallel && n.chains>1){
  
   par <- run.parallel(data,inits,parameters.to.save,model.file,n.chains,n.adapt,n.iter,n.burnin,n.thin,
-                      modules,factories,seed,DIC,verbose=verbose,n.cores=n.cores) 
+                      modules=modules,factories=factories,DIC=DIC,verbose=verbose,n.cores=n.cores) 
   samples <- par$samples
   m <- par$model
   total.adapt <- par$total.adapt
